feat(catalog): publish native inference evidence