@@ -192,7 +192,7 @@ class ModelPerformanceProfileRegistryTest {
   void aggregateCatalogPublishesControlledCompilerComparisons() {
     ModelPerformanceProfileRegistry registry = ModelPerformanceProfileRegistry.fromClasspath();
 
-    assertEquals(18, registry.profiles().size());
+    assertEquals(20, registry.profiles().size());
     assertTrue(
         registry.profiles().stream()
             .anyMatch(
@@ -563,6 +563,91 @@ class ModelPerformanceProfileRegistryTest {
                             .get("candidateReportSha256")
                             .equals(
                                 "9e98947ae5747ef7d433b88fc4b174863667f4a7b4b6b82ed4eeb448adf18e31")));
+    assertTrue(
+        registry.profiles().stream()
+            .anyMatch(
+                profile ->
+                    profile
+                            .id()
+                            .equals(
+                                "qwen2_5_coder_1_5b_q8_0_epyc_milan_jdk25_rust_ffm_coding")
+                        && profile.backend().equals("rust-ffm")
+                        && profile.recommendations().isEmpty()
+                        && profile
+                            .javaLaunch()
+                            .orElseThrow()
+                            .jvmArguments()
+                            .equals(List.of("--enable-native-access=ALL-UNNAMED"))
+                        && !profile.safeForAutomaticSelection()
+                        && profile
+                            .evidence()
+                            .benchmarkId()
+                            .equals("qwen2.5-coder-1.5b-q8-rust-ffm-coding-20260724")
+                        && profile.evidence().trials() == 27
+                        && !profile.evidence().outputHashesMatch()
+                        && profile
+                            .evidence()
+                            .controls()
+                            .get("pairedRawOutputs")
+                            .equals("different-semantic-parity-verified")
+                        && profile
+                            .evidence()
+                            .controls()
+                            .get("baselineReportSha256")
+                            .equals(
+                                "87034690196fdc3ecf3d506de039df9eed2e9e138528488d9f0dc16c67ff3f54")
+                        && profile
+                            .evidence()
+                            .controls()
+                            .get("candidateReportSha256")
+                            .equals(
+                                "8aae6eb24601b031acaaf33998f39e5c753eab106a27ec99242c2db2bd13db66")));
+    assertTrue(
+        registry.profiles().stream()
+            .anyMatch(
+                profile ->
+                    profile
+                            .id()
+                            .equals("sqlcoder_7b_2_q5_k_m_epyc_milan_jdk25_rust_ffm")
+                        && profile.backend().equals("rust-ffm")
+                        && "true"
+                            .equals(
+                                profile
+                                    .recommendations()
+                                    .get("models.native.quantizedDecode"))
+                        && "4"
+                            .equals(
+                                profile
+                                    .recommendations()
+                                    .get("models.native.kernels.threads"))
+                        && profile
+                            .javaLaunch()
+                            .orElseThrow()
+                            .jvmArguments()
+                            .equals(
+                                List.of(
+                                    "--enable-native-access=ALL-UNNAMED",
+                                    "-XX:ActiveProcessorCount=4"))
+                        && profile.safeForAutomaticSelection()
+                        && profile
+                            .evidence()
+                            .benchmarkId()
+                            .equals("sqlcoder-q5-k-native-decode-20260725")
+                        && profile.evidence().trials() == 10
+                        && profile.evidence().generatedTokens() == 4
+                        && profile.evidence().outputHashesMatch()
+                        && profile
+                            .evidence()
+                            .controls()
+                            .get("candidateReportSha256")
+                            .equals(
+                                "a20e25c0afa2371b83eed5cc1b65e2c85857c31dbdbf2e88e2a6f761280939c0")
+                        && profile
+                            .evidence()
+                            .controls()
+                            .get("comparisonReportSha256")
+                            .equals(
+                                "24705f2fd6107a6a624a62730c1553a22589de30024b1437f28663a2c79db1dd")));
     assertTrue(
         registry.profiles().stream()
             .anyMatch(
